@@ -1,3 +1,6 @@
+07/09/20
+  - Fixes for Micro800 strings
+
 07/08/20
   - Fixed read issues after reorganization
   - Upped version to 0.6.11
